# TinyMPC_CrossComplier

./: note.txt
examples/: CMakeLists.txt  quadrotor_hovering.cpp
include/Eigen/Eigen/src/Core/: MathFunctions.h  NumTraits.h
src/tinympc/: CMakeLists.txt
test/: CMakeLists.txt  test1.cpp
